--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
         classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.2'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
+//        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
