--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="22" />
-
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -48,7 +48,16 @@
                 android:value=".activity.MainActivity"/>
         </activity>
 
-        <service android:name=".service.TrackingService" />
+        <service
+            android:name=".service.TrackingService"
+            android:exported="false"/>
+
+        <!-- Service that provides activity recognition data. Setting the android:exported attribute
+        to "false" stops other apps from starting this service, even when using an explicit
+        intent. -->
+        <service
+            android:name=".service.DetectedActivitiesIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
