--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,27 +37,27 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.android.support:design:23.1.0'
-    compile 'com.google.android.gms:play-services:8.1.0'
     // Productivity
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'io.reactivex:rxjava:1.0.14'
     // Database
     apt 'com.raizlabs.android:DBFlow-Compiler:2.2.1'
-    compile "com.raizlabs.android:DBFlow-Core:2.2.1"
-    compile "com.raizlabs.android:DBFlow:2.2.1"
     // Debug
-    compile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-    compile 'com.jakewharton.timber:timber:4.1.0'
-    compile 'com.facebook.stetho:stetho:1.2.0'
     // Android test
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
     androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.1.9'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.android.support:design:23.1.0'
+    compile 'com.google.android.gms:play-services:8.1.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'io.reactivex:rxandroid:1.0.1'
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'com.raizlabs.android:DBFlow-Core:2.2.1'
+    compile 'com.raizlabs.android:DBFlow:2.2.1'
+    compile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+    compile 'com.jakewharton.timber:timber:4.1.0'
+    compile 'com.facebook.stetho:stetho:1.2.0'
 }
 
 buildscript {
