--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rufus.shredmachine" >
+    package="com.rufus.shredmachine">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="22" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -17,11 +18,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar" >
+        android:theme="@style/AppTheme.NoActionBar">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAQgZF1HE0UlJSGbVnSG7C0je1HhywZuxk"/>
-
+            android:value="@string/google_maps_key" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -30,34 +31,57 @@
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.TrackingActivity"
             android:label="@string/title_activity_tracking"
+            android:parentActivityName=".activity.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".activity.MainActivity">
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.MainActivity"/>
+                android:value=".activity.MainActivity" />
         </activity>
 
         <service
             android:name=".service.TrackingService"
-            android:exported="false"/>
+            android:exported="false" />
 
-        <!-- Service that provides activity recognition data. Setting the android:exported attribute
+        <!--
+        Service that provides activity recognition data. Setting the android:exported attribute
         to "false" stops other apps from starting this service, even when using an explicit
-        intent. -->
+        intent.
+        -->
         <service
             android:name=".service.DetectedActivitiesIntentService"
             android:exported="false" />
+
+        <activity
+            android:name=".activity.GeoFenceListActivity"
+            android:label="@string/title_activity_geo_fence_list"
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.rufus.shredmachine.activity.MainActivity" />
+        </activity>
+
+        <activity
+            android:name="com.rufus.shredmachine.activity.SetGeoFenceActivity"
+            android:label="@string/title_activity_set_geo_fence">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.rufus.shredmachine.activity.GeoFenceListActivity" />
+
+        </activity>
+
     </application>
 
 </manifest>
+
+
